arreglo de error

--- a/templates/administracion/index.html
+++ b/templates/administracion/index.html
@@ -28,7 +28,7 @@
           <a class="nav-link" href="/visita/prueba/" >Visitas</a>
         </li>
           <li class="nav-item">
-          <a class="nav-link" href="#">Mantenimientos</a>
+          <a class="nav-link" href="/mantenimiento/lista-mantenimiento/">Mantenimientos</a>
         </li>
       </ul>
 
