--- a/templates/servicio/pasarella.html
+++ b/templates/servicio/pasarella.html
@@ -24,7 +24,8 @@
                         <form  class="row g-3 needs-validation" novalidate> {% csrf_token %}
                             <div class="col-md-12">
                                 <label for="numero" class="form-label">Numero de tarjeta</label>
-                                <input type="text" name="numero" type="text" class="form-control" maxlength="16" required>
+                            
+                                <input type="number" pattern="/^-?\d+\.?\d*$/" onKeyPress="if(this.value.length==16) return false;" required class="form-control" />
                                 <div class="valid-feedback">
                                     Campo OK!!
                                 </div>
@@ -34,6 +35,7 @@
                             </div>
                             <div class="col-md-6">
                                 <label for="nombre" class="form-label">Nombre</label>
+                                
                                 <input type="nombre" name="nombre" type="text" class="form-control" required>
                                 <div class="valid-feedback">
                                     Campo OK!!
@@ -79,7 +81,7 @@
 
                             </div>
                             <div class="col-md-4 mt-4">
-                                <label for="fecha">Mes expiración</label>
+                                <label for="fecha">Año expiración</label>
                                 <select name="year" id="year" class="form-select" required>
                                     <option selected disabled value="">Seleccione...</option>
                                     <option value="2021"> 2021</option>
@@ -88,30 +90,7 @@
                                     <option value="2024"> 2024</option>
                                     <option value="2025"> 2025</option>
                                     <option value="2026 "> 2026</option>
-                                    <option value="2027"> 2027</option>
-                                    <option value="2028"> 2028</option>
-                                    <option value="2029"> 2029</option>
-                                    <option value="2031"> 2031</option>
-                                    <option value="2032 "> 2032</option>
-                                    <option value="2033"> 2033</option>
-                                    <option value="2034"> 2034</option>
-                                    <option value="2035"> 2035</option>
-                                    <option value="2036"> 2036</option>
-                                    <option value="2037"> 2037</option>
-                                    <option value="2038 "> 2038</option>
-                                    <option value="2039"> 2039</option>
-                                    <option value="2040"> 2040</option>
-                                    <option value="2041"> 2041</option>
-                                    <option value="2042"> 2042</option>
-                                    <option value="2043"> 2043</option>
-                                    <option value="2044 "> 2044</option>
-                                    <option value="2045"> 2045</option>
-                                    <option value="2046"> 2046</option>
-                                    <option value="2047"> 2047</option>
-                                    <option value="2048"> 2048</option>
-                                    <option value="2049"> 2049</option>
-                                    <option value="2050 "> 2050</option>
-                                </select>
+                                  
                                 <div class="valid-feedback">
                                     Campo OK!!
                                 </div>
@@ -121,7 +100,7 @@
                             </div>
                             <div class="col-md-4">
                                 <label for="cvv" class="form-label">cvv</label>
-                                <input type="cvv" name="cvv" type="text" class="form-control" required maxlength="3">
+                                <input type="number" pattern="/^-?\d+\.?\d*$/" onKeyPress="if(this.value.length==3) return false;" required class="form-control" />
                                 <div class="valid-feedback">
                                     Campo OK!!
                                 </div>
