--- a/templates/actividades/lista_actividades.html
+++ b/templates/actividades/lista_actividades.html
@@ -38,7 +38,7 @@
                 
                 <div style="text-align: center;">
                     <ul class="list-group">
-                        <li class="list-group-item" style="background-color: bisque; color:red;">{{e.espacio}}</li>
+                        <li class="list-group-item" style="background-color: bisque; color:red;">{{e.dia_mantenimiento}}</li>
                         <li class="list-group-item">{{e.hora_reserva}}</li>
                         <li class="list-group-item">{{e.estado}}</li>
                         <li class="list-group-item">{{e.fecha_reserva}}</li>
