--- a/templates/mantenimiento/lista-mantenimiento.html
+++ b/templates/mantenimiento/lista-mantenimiento.html
@@ -2,11 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Administración</title>
+    <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
     <div class="container">
@@ -18,25 +16,43 @@
                 </form>
                 <h1 style="text-align: center;">Trabajos de mantenimiento</h1>
                 <h5 class="mt-1" style="text-align: left;">Para reservar registrar algún trabajo sobre su departamento presione aquí:
-                    <a href="/actividades/crear-actividades/" class="btn btn-success">Registrar mantenimiento</a>
+                    <a href="/mantenimiento/crear-mantenimiento/" class="btn btn-success">Registrar mantenimiento</a>
                 </h5>
                 <h5 class="mt-1" style="text-align: left;">Para tu lista de mantenimientos presione aquí :
-                    <a href="/actividades/mis-actividades/Sala star" class="btn btn-success">Mis mantenimientos</a>
+                    <a href="/mantenimiento/mis-mantenimientos" class="btn btn-success">Mis mantenimientos</a>
                 </h5>
                 <div>
                     <h3>Lista de mantenimientos</h3>
     
                 </div>
     
-                <!-- <div style="position: relative; text-align: center;">
+                <div style="position: relative; text-align: center;">
     
     
-                    <a href="/actividades/lista-actividades/Sala star" class="btn btn-danger">Sala star</a>
-                    <a href="/actividades/lista-actividades/Piscina" class="btn btn-danger">Piscina</a>
-                    <a href="/actividades/lista-actividades/Área parrilla" class="btn btn-danger">Área parrilla</a>
-                    <a href="/actividades/lista-actividades/Área recreativa" class="btn btn-danger">Área recreativa</a>
+                    <a href="/mantenimiento/lista-mantenimiento/Usuarios" class="btn btn-danger">Usuarios</a>
+                    <a href="/mantenimiento/lista-mantenimiento/Administracion" class="btn btn-danger">Administracion</a>
+                 
                 </div>
-                 -->
+                {% for e in object_list %}
+                <div class="col-12">
+                
+                    <div style="text-align: center;">
+                        <ul class="list-group">
+                            <li class="list-group-item" style="background-color: bisque; color:red;">{{e.espacio}}</li>
+                            <li class="list-group-item">Nro trababajadores: {{e.nro_trabajadores}}</li>
+                            <li class="list-group-item">Hora: {{e.hora_mantenimiento}}:00 </li>
+                            <li class="list-group-item">Descripción: {{e.descripcion}}</li>
+                            <li class="list-group-item">departamento: {{e.nro_departamento}}</li>
+                            <li class="list-group-item">usuario: {{e.usuario}}</li>
+                            <!-- <form method="GET"> {% csrf_token %}
+                                <a href="/mantenimiento/add_trabajadores/{{e.id}}" class="btn btn-success">Registrar trabajadores</a>
+                                <a href="/mantenimiento/detalles/{{e.id}}" class="btn btn-success">Detalles de trabajadores</a>
+                            </form> -->
+                        </ul>
+                    </div>
+                </div>
+                {% endfor %}
+                
             </div>
     
         </div>
