correcion de incidencias

--- a/templates/actividades/lista_actividades.html
+++ b/templates/actividades/lista_actividades.html
@@ -17,8 +17,11 @@
             <h5 class="mt-1" style="text-align: left;">Para reservar un espacio presione aquí: 
                 <a href="/actividades/crear-actividades/" class="btn btn-success">Solicitar una espacio</a> 
             </h5>
-            <h5 class="mt-1" style="text-align: left;">Para tu lista de reservas presiona aquí   :
+            <h5 class="mt-1" style="text-align: left;">Para tu lista de reservas presione aquí   :
                 <a href="/actividades/mis-actividades/Sala star" class="btn btn-success">Mis reservas</a>
+            </h5>
+            <h5 class="mt-1" style="text-align: left;">Para ir al inicio presione aquí :
+                <a href="/" class="btn btn-success">Inicio</a>
             </h5>
             <div>
                 <h3>Lista de los espacios ya reservados total</h3>
